webapp/src/css/inbox.less
/* ... */
.content-pane {
  height: 100%;
}

.message-content-wrapper {
  height: 100%;
  .item-content {
    bottom: 57px;
    top: 30px;
    position: absolute;
    height: auto;
    right: 0;
  }
  .name-header,
  .reply {
    padding: 10px 20px;
  }
  .name-header {
    border-bottom: 1px solid @separator-color;
    .name {
      display: block;
      font-size: @font-extra-large;
    }
  }
  .reply {
    border-top: 1px solid @separator-color;
    div {
      padding: 0;
    }
    textarea {
      width: 100%;
      height: 40px;
      padding: 7px;
      resize: none;
      overflow: hidden;
    }
    .message-actions {
      display: block;
      text-align: right;
      .btn-link {
        float: left;
      }
      .note {
        margin-right: 15px;
      }
    }
    &.sending {
      textarea {
        height: 100px;
        overflow: auto;
      }
    }
  }
  .recipient {
    display: none;
  }
}

.reports .select-mode-available .report-body .item-summary {
  cursor: pointer;
}

.report-image {
  max-width: 100%;
}

.contacts {
  .fa-star.primary {
    color: @contacts-primary-color;
    font-size: 12px;
    vertical-align: middle;
  }
  .card .resource-icon {
    svg, img {
      width: @icon-small;
      height: @icon-small;
    }
  }

  .card.children .row a:hover {
    border-color: @contacts-color;
  }
  .card.tasks .row a:hover {
    border-color: @tasks-color;
  }
  .card.reports .row a:hover {
    border-color: @reports-color;
  }
  .action-header {
    overflow: auto;

    h3 {
      float: left;

      .children-count {
        color: @gray-ultra-dark;
        font-size: @font-XXS;
        background: @gray-light;
        border-radius: 50%;
        padding: 1px 6px;
        margin-left: 4px;
        position: relative;
        top: -1px;
      }
    }

    .table-filter {
      float: right;
      display: flex;
      font-size: @font-small;

      a {
        padding-left: 0;
        padding-right: 0;
        color: @label-color;
        text-decoration: none;

        &.selected {
          color: #000;
          font-weight: bold;
        }

        &::after {
          content: ' |'; /* asymmetrical because there's already whitespace after */
          color: @label-color;
          font-weight: normal;
        }

        &:last-child::after {
          content: '';
        }
      }
    }
  }

  .card.children .content-row.muted h4 {
    color: @inactive-color;
  }
}

.tasks .item-content {
  .action-header {
    overflow: auto;
  }

  .actions a {
    margin-right: 10px;
    margin-bottom: 10px;
  }
  .body > div > ul > li:first-child {
    border-top: 0;
  }
}

.inbox-items {
  padding: 0;
  background-color: @form-background-color;
  border-right: 1px solid @separator-color;

  .alert {
    margin: 10px;
  }

  .padding {
    height: 120px;
  }
}

.loading-status {
  margin: 10px 10px calc(@tab-navbar-size + 10px);
  text-align: center;
  font-size: @font-small;
  color: @label-color;
}

.scheduled-tasks {
  padding: 10px 20px;
  .loader {
    font-size: 6px;
  }
}

.task-state {
  color: @label-color;
  font-size: @font-small;
  min-height: 20px;
  .state {
    font-weight: bold;
    &:before {
      content: '\f111'; // https://fontawesome.com/v4.7.0/icon/circle/
      font-family: FontAwesome;
      font-size: 8px;
      margin-right: 5px;
      vertical-align: middle;
    }
    &.received:before {
      content: '';
      margin-right: 0;
    }
    &.scheduled:before {
      color: @scheduled-state-color;
    }
    &.pending:before {
      color: @pending-state-color;
    }
    &.forwarded-to-gateway:before {
      color: @forwarded-to-gateway-state-color;
    }
    &.forwarded-by-gateway:before {
      color: @forwarded-by-gateway-state-color
    }
    &.received-by-gateway:before {
      color: @received-by-gateway-state-color;
    }
    &.sent:before {
      color: @sent-state-color;
    }
    &.delivered:before {
      color: @delivered-state-color;
    }
    &.muted:before {
      color: @muted-state-color;
    }
    &.cleared:before {
      color: @cleared-state-color;
    }
    &.denied:before {
      color: @denied-state-color;
    }
    &.failed:before {
      color: @failed-state-color;
    }
  }

  &.has-error .state.scheduled {
    &,
    &:before {
      color: @failed-state-color;
    }
  }
}

.item-content {
  padding: 30px;
  .body p {
    word-break: break-word;
    margin: 0;
  }
  > div,
  .report-wrap > div {
    margin-bottom: 10px;
  }
  .padding {
    height: 80px;
    clear: left;
  }
  .deselect {
    float: right;
    clear: right;
    margin-right: -10px;
    margin-top: -14px;
  }
  .action-icon {
    float: left;
  }
}

.incomplete .body h2 {
  color: @error-color;
}

a.fa:hover {
  text-decoration: none;
}
/* ... */

